Attempt at active state

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 <body>
   <main>
-    <img id="equilibrium" src="images/image-equilibrium.jpg" >
+    <a id="firstpic" href="#">
+      <img id="equilibrium" src="images/image-equilibrium.jpg">
+    </a>
     <p>
-      Equilibrium #3429
+      <a href="#">Equilibrium #3429</a>
     </p>
     <p>
-      Our Equilibrium collection promotes balance and calm
+      Our Equilibrium collection promotes balance and calm.
     </p>
     <img src="images/icon-ethereum.svg"> 
     <p>
@@ -30,7 +32,7 @@
     
     <footer>
       <img id="Authorpic"src="images/image-avatar.png"> 
-      <p id="Author">Creation of <span>Jules Wyvern</span></p>
+      <p id="Author">Creation of <a href="#" id="link1">Jules Wyvern</a></p>
     </footer>
   </main>
 </body>
